# wsprspots

./: Cargo.toml  README.md
.github/workflows/: windows-native.yml
src/: excluded.rs  main.rs
