[package]
name = "wsprspots"
version = "0.1.0"
authors = ["Mikael Voss <mvs@nya.yt>"]
edition = "2018"

description = "Quick and dirty tool to create ADIF logs from WSPRnet spot database dumps"
readme = "README.md"
repository = "https://github.com/illdefined/wsprspots"

license = "MirOS"

keywords = ["amateur-radio", "wspr", "adif"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
smartstring = "0.2"
unicase = "2.6"

[profile.release]
lto = true
